# omega-13

./: .gitignore  2025-12-26-so-for-cloud-providers-we-can-have-it-so-open-api-continued.txt  2025-12-26-so-for-cloud-providers-we-can-have-it-so-open-api.txt  AGENTS.md  BUILD.md  CHANGELOG.md  CLAUDE.md  Containerfile  Containerfile.cpu  GEMINI.md  README.md  backlog.md  bootstrap.sh  build-whisper-image.sh  compose-dev.cpu.yml  compose-dev.yml  compose.yml  demo_daily_note_feature.py  design_review.md  omega13.sh  podman-compose-production.yml  podman-compose.yml  pyproject.toml  refactor_assesment.md  requirements.txt  test_transcription_debug.py  timemachine.py  transcription.py  verify_transcription.py
.claude/: settings.local.json
.sisyphus/: boulder.json
deployment/: podman-compose-production.yml  podman-compose.yml
docs/: QUICKSTART.md  TRANSCRIPTION.md  real-time-analysis.md
refactor/: plan.md  state.json
scripts/: bootstrap.sh  demo_auto_transcription_usage.py  example_auto_transcription.py
src/omega13/: ui.py  (+17 more)
tests/: AGENTS.md  EXPECTED_OUTPUTS.md  demo_auto_transcription_usage.py  demo_transcription_progress.py  test_auto_transcription_workflow.py  test_baseline_measurements.py  test_converted_demos.py  test_custom_config.py  test_deduplication.py  test_format_conversion.py  test_groq_provider.py  test_health_check.py  test_incremental_save.py  test_injection.py  test_metadata_extraction.py  test_mp3_encoding.py  test_obsidian_integration.py  test_realtime_safety.py  test_subprocess_wrapper.py  test_tui_bindings.py
whisper-server/: Containerfile
(+32 files in other folders)
