[project]
name = "omega13"
version = "2.1.0"
description = "A Textual TUI for retroactive audio recording and transcription"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.70.0",
    "JACK-Client>=0.5.0",
    "numpy>=1.26.0",
    "soundfile>=0.12.0",
    "requests>=2.31.0",
    "pyperclip>=1.8.0",
    "pynput>=1.7.6",
]

[project.scripts]
omega13 = "omega13.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omega13"]